hooked up factoids to the home page, a little buggy with TextLoop, will need to get the words to wrap

--- a/src/styleSheets/home.css
+++ b/src/styleSheets/home.css
@@ -12,9 +12,13 @@
   padding: 1rem;
   height: 8rem;
   color: var(--darkGr);
+
   border-radius: 1rem;
 }
 
+.factoidDiv > p {
+  word-wrap: normal;
+}
 
 #mapBtn, #materialsBtn {
   width: 10vh;
